# PulseDB

./: .gitignore  .gitleaks.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSING.md  PUBLIC_BOUNDARY.md  README.md  ROADMAP.md  SECURITY.md  deny.toml
.github/workflows/: ci.yml
benches/: recall_rerank.rs  sync.rs
docs/: 01-PRD.md  02-SRS.md  03-Architecture.md  04-DataModel.md  05-API-Reference.md  06-Performance.md  07-Security.md  08-Testing.md  09-Developer-Guide.md  10-Backlog.md  11-ProjectPlan.md  12-Operations.md  README.md
docs/adr/: ADR-001-redb-for-storage.md  ADR-002-hnswlib-for-vector-index.md  ADR-003-single-writer-concurrency.md  ADR-004-rich-experience-types.md  ADR-005-pure-rust-hnsw.md  README.md
docs/phases/: Phase-1-Foundation.md  Phase-2-Substrate.md  Phase-3-Release.md
src/: config.rs  db.rs  lib.rs  types.rs
src/experience/: decay.rs  mod.rs  types.rs  validation.rs
src/search/: context.rs  filter.rs  mod.rs  rerank.rs
src/storage/: mod.rs  redb.rs  schema.rs
src/substrate/: impl.rs  mod.rs
src/sync/: applier.rs  manager.rs  mod.rs  pusher.rs  server.rs  types.rs
src/watch/: mod.rs
tests/: activity.rs  experience.rs  lifecycle.rs  pulsevision_apis.rs  substrate_integration.rs  sync_engine.rs  sync_foundation.rs  sync_http.rs
