[package]
name = "pulsehive-db"
version = "0.5.1"
edition = "2021"
rust-version = "1.89"
authors = ["PulseDB Team"]
description = "Embedded database for agentic AI systems — collective memory for multi-agent coordination"
license = "AGPL-3.0-only"
repository = "https://github.com/pulseai-labs/PulseDB"
documentation = "https://docs.rs/pulsehive-db"
keywords = ["database", "embedded", "ai", "agents", "vector"]
categories = ["database", "embedded"]
readme = "README.md"

[lib]
name = "pulsedb"

[features]
default = []
builtin-embeddings = ["ort", "tokenizers", "ndarray", "dirs", "ureq"]
sync = ["tokio/time", "tokio/sync", "tokio/macros"]
sync-http = ["sync", "reqwest"]
sync-websocket = ["sync", "tokio-tungstenite"]

[dependencies]
# Storage - redb is a pure Rust embedded KV store with ACID transactions
redb = "2.1"

# Serialization - bincode is fast and compact for internal storage
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }

# IDs - UUID v7 provides time-ordered unique identifiers
uuid = { version = "1.0", features = ["v7", "serde"] }

# Error handling - thiserror derives Error trait with minimal boilerplate
thiserror = "1.0"

# Observability - tracing provides structured logging with spans
tracing = "0.1"

# Vector index - HNSW approximate nearest neighbor search (pure Rust, ADR-005)
hnsw_rs = "0.3"

# Distance metrics for HNSW (cosine, L2, etc.) - direct dep since we import DistCosine
anndists = "0.1"

# JSON serialization for HNSW metadata files (human-readable for debugging)
serde_json = "1.0"

# Cross-process watch - advisory file locking for writer detection
fs2 = "0.4"

# Watch system - bounded sync channels for in-process event delivery (<100ns per event)
crossbeam-channel = "0.5"

# Stream trait for async watch API (trait-only crate, no executor/runtime)
futures-core = "0.3"

# Efficient async waker integration for crossbeam→Stream bridge
atomic-waker = "1"

# Async trait support for SubstrateProvider (object-safe async traits)
async-trait = "0.1"

# Async runtime for spawn_blocking in SubstrateProvider wrappers
tokio = { version = "1", features = ["rt"] }

# Optional: ONNX runtime for builtin embedding generation
ort = { version = "2.0.0-rc.9", optional = true, features = ["ndarray"] }

# Optional: HuggingFace tokenizer for text preprocessing (WordPiece, BPE)
tokenizers = { version = "0.23", optional = true, default-features = false, features = ["onig"] }

# Optional: N-dimensional arrays for ONNX tensor construction (must match ort's ndarray version)
ndarray = { version = "0.17", optional = true }

# Optional: Cross-platform cache directory resolution
dirs = { version = "6.0", optional = true }

# Optional: HTTP client for model downloads from HuggingFace
ureq = { version = "3.0", optional = true }

# Optional: HTTP transport for sync protocol
reqwest = { version = "0.12", optional = true, default-features = false, features = ["rustls-tls", "gzip"] }

# Optional: WebSocket transport for sync protocol
tokio-tungstenite = { version = "0.24", optional = true }

[dev-dependencies]
# Testing utilities
tempfile = "3.0"

# Stream combinators for watch integration tests (StreamExt::next, block_on)
futures = "0.3"

# Async runtime for integration tests (multi-thread + macros for #[tokio::test])
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

# Axum for HTTP sync integration tests (server-side, dev only)
axum = "0.8"

# Benchmarking framework
criterion = { version = "0.5", features = ["html_reports"] }

# Property-based testing (E5-S03: verify invariants with random inputs)
proptest = "1.4"

[[bench]]
name = "lifecycle"
harness = false

[[bench]]
name = "core_operations"
harness = false

[[bench]]
name = "workloads"
harness = false

[[bench]]
name = "scaling"
harness = false

[[bench]]
name = "recall_rerank"
harness = false

[[bench]]
name = "sync"
harness = false
required-features = ["sync"]

[profile.release]
lto = true
codegen-units = 1

[profile.dev]
# Faster builds during development
opt-level = 0
debug = true

[profile.test]
# Match dev profile for consistent behavior
opt-level = 0
debug = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
